	- Fixed virtual-host coredump bug (Aaron Hopkins).
	- Disabled storeDirClean() for Unixware.
	- Protected objcache log/enable, log/disable with password.
	- Fixed protoDispatch() to check firewall_ip_list before
	  'inside_firewall'.
	- Added '!' condition feature for the 'firewall_ip' list
	  (Hiroyuki Inoue).
	- Fixed BASE tag in ftpget output (broken since v1.0.10).

Changes to squid-1.0.18 (October 7, 1996):

	- Added INADDR_NONE to cachemgr.c for Solaris.
	- Added checks to deal with Harvest Cached neighbors which don't
	  handle Squid's ICP version 2.
	- Added file upload patch (Jan Niehusmann).

Changes to squid-1.0.17 (September 24, 1996):

	- Fixed cachemgr.cgi to handle an arbitrary IP address (Ron
	  Gomes)
	- Fixed syslog() calls to use syslog(X, "%s", buf) (Yoichi
	  Shinoda).
	- Copied ipcache locking stuff from v1.1.
	- Copied httpConnect() from v1.1 for non-blocking DNS lookups.
	- Fixed "\r\n\0" bug in gopherSendRequest();

Changes to squid-1.0.16 (September 16, 1996):

	- Fixed shadow passwd support (John Saunders).
	- Added checkFailureRatio() to detect high fail:success ratios
	  and go into ICP "hit only" mode for 5 minutes when the ratio
	  exceeds 1.
	- Added ip_acl_destroy() to reset 'local_ip' and 'firewall_ip'
	  on HUP signal.
	- Fixed quick_abort parsing bug.

Changes to squid-1.0.15 (September 13, 1996):

	- Fixed stupid bugs from moving icpState->flags to
	  request->flags.

Changes to squid-1.0.14 (September 13, 1996):

	- Added '#if DELAY_HACK' code for Mike Groeneweg
	  <mikeg@scorpion.murdoch.edu.au>.
	- Fixed debug bug in ttlSet().
	- Moved icpState->flags to request->flags.
	- Fixed edgeWouldBePinged() to skip SIBLINGS and NO-CACHE
	  requests.
	- Fixed bad SET/TEST in httpProcessReplyHeader() (Miguel A.L.
	  Paraz).

Changes to squid-1.0.13 (September 12, 1996):

	- Fixed ftpget parsing PASV reply bug (Carson Gaspar).
	- Forced include of <netinet/in_systm.h> for NeXT (Holger
	  Hoffstaette).