@@ -886,6 +886,44 @@ void comm_remove_close_handler(fd, handler, data)
     safe_free(p);
 }
 
+#ifdef USE_MULTICAST
+int comm_set_mcast_ttl(fd, mcast_ttl)
+     int fd, mcast_ttl;
+{
+#ifdef IP_MULTICAST_TTL
+    debug(5, 10, "comm_set_mcast_ttl: setting multicast TTL %d on FD %d\n", 
+        mcast_ttl, fd);
+    if (setsockopt(fd, IPPROTO_IP, IP_MULTICAST_TTL,
+                          (char *) &mcast_ttl, sizeof(char)) < 0)
+	debug(5, 1, "comm_set_mcast_ttl: FD %d, TTL: %d: %s\n", 
+          fd, mcast_ttl, xstrerror());
+#endif
+    return 0;
+}
+
+int comm_join_mcast_groups(fd)
+     int fd;
+{
+#ifdef IP_MULTICAST_TTL
+    struct ip_mreq mr;
+    wordlist *s = NULL;
+
+    for (s = getMcastGroupList(); s; s = s->next) {
+        debug(5, 10, 
+            "comm_join_mcast_groups: joining group %s on FD %d\n", s->key, fd);
+
+        mr.imr_multiaddr.s_addr = inet_addr(s->key);
+        mr.imr_interface.s_addr = INADDR_ANY;
+        if (setsockopt(fd, IPPROTO_IP, IP_ADD_MEMBERSHIP,
+                                   (char *)&mr, sizeof(struct ip_mreq)) < 0)
+            debug(5, 1, "comm_join_mcast_groups: FD %d, addr: %s\n",
+                fd, s->key);
+    }
+#endif
+    return 0;
+}
+
+#endif /* USE_MULTICAST */
 static void commSetNoLinger(fd)
      int fd;
 {
